--- a/debug/settings.ini
+++ b/debug/settings.ini
@@ -10,11 +10,20 @@
             <P>0</P>
             <D></D>
         </PB>
+        <PB>
+            <ID></ID>
+            <T1>1</T1>
+            <T2>0.0</T2>
+            <U1>10.20</U1>
+            <U2>11.20</U2>
+            <P>0</P>
+            <D></D>
+        </PB>
     </Group0>
     <Settings>
         <A>1264882191</A>
         <AE>2506306137</AE>
-        <COM>COM3</COM>
+        <COM>COM4</COM>
         <iTAnswerWait>500</iTAnswerWait>
         <iNRepeat>2</iNRepeat>
         <iTBtwRepeats>0.5</iTBtwRepeats>
@@ -22,10 +31,14 @@
         <gTBtwRepeats>0.5</gTBtwRepeats>
         <gTBtwGrInd>100</gTBtwGrInd>
         <rRBdlit>60</rRBdlit>
-        <rUseRBdlit>1</rUseRBdlit>
+        <rUseRBdlit>0</rUseRBdlit>
+        <rTimeSlot>90</rTimeSlot>
+        <rSlotAddDelay>51</rSlotAddDelay>
+        <rT1>2</rT1>
+        <rT2>0.2</rT2>
         <cStartIndicatorFading>1</cStartIndicatorFading>
         <About></About>
-        <SaveLog>0</SaveLog>
+        <SaveLog>1</SaveLog>
         <PBgroupnumber>0</PBgroupnumber>
         <status0>Реле1 выкл.</status0>
         <status1>Реле1 выключено</status1>
