--- a/release/settings.ini
+++ b/release/settings.ini
@@ -24,6 +24,9 @@
         <rRBdlit>60</rRBdlit>
         <rUseRBdlit>1</rUseRBdlit>
         <rTimeSlot>0</rTimeSlot>
+        <rSlotAddDelay>50</rSlotAddDelay>
+        <rT1>1</rT1>
+        <rT2>0</rT2>
         <cStartIndicatorFading>1</cStartIndicatorFading>
         <About></About>
         <SaveLog>0</SaveLog>
