15-04_24-09-2025-add_command_timeout_to_settings

--- a/debug/settings.ini
+++ b/debug/settings.ini
@@ -10,6 +10,15 @@
             <P>0</P>
             <D></D>
         </PB>
+        <PB>
+            <ID>15</ID>
+            <T1>1</T1>
+            <T2>0.0</T2>
+            <U1>10.20</U1>
+            <U2>11.20</U2>
+            <P>0</P>
+            <D></D>
+        </PB>
     </Group3>
     <Settings>
         <A>1264882191</A>
@@ -21,11 +30,12 @@
         <gNRepeat>1</gNRepeat>
         <gTBtwRepeats>2.0</gTBtwRepeats>
         <gTBtwGrInd>100</gTBtwGrInd>
+        <sendTimeoutMs>500</sendTimeoutMs>
         <rRBdlit>4</rRBdlit>
         <rUseRBdlit>0</rUseRBdlit>
-        <rTimeSlot>3</rTimeSlot>
-        <rSlotAddDelay>1000</rSlotAddDelay>
-        <rT1>10</rT1>
+        <rTimeSlot>10</rTimeSlot>
+        <rSlotAddDelay>100</rSlotAddDelay>
+        <rT1>1</rT1>
         <rT2>0.5</rT2>
         <cStartIndicatorFading>1</cStartIndicatorFading>
         <About></About>
