--- a/debug/settings.ini
+++ b/debug/settings.ini
@@ -3,15 +3,6 @@
     <Group3>
         <PB>
             <ID>13</ID>
-            <T1>10</T1>
-            <T2>0.0</T2>
-            <U1>10.20</U1>
-            <U2>11.20</U2>
-            <P>0</P>
-            <D></D>
-        </PB>
-        <PB>
-            <ID>15</ID>
             <T1>1</T1>
             <T2>0.0</T2>
             <U1>10.20</U1>
@@ -20,21 +11,41 @@
             <D></D>
         </PB>
     </Group3>
+    <Group4>
+        <PB>
+            <ID>17</ID>
+            <T1>1</T1>
+            <T2>0.0</T2>
+            <U1>10.20</U1>
+            <U2>11.20</U2>
+            <P>0</P>
+            <D></D>
+        </PB>
+        <PB>
+            <ID>16</ID>
+            <T1>1</T1>
+            <T2>0.0</T2>
+            <U1>10.20</U1>
+            <U2>11.20</U2>
+            <P>0</P>
+            <D></D>
+        </PB>
+    </Group4>
     <Settings>
         <A>1264882191</A>
         <AE>2506306137</AE>
-        <COM>COM4</COM>
-        <iTAnswerWait>700</iTAnswerWait>
-        <iNRepeat>3</iNRepeat>
+        <COM>COM5</COM>
+        <iTAnswerWait>500</iTAnswerWait>
+        <iNRepeat>1</iNRepeat>
         <iTBtwRepeats>0.5</iTBtwRepeats>
-        <gNRepeat>1</gNRepeat>
-        <gTBtwRepeats>2.0</gTBtwRepeats>
+        <gNRepeat>2</gNRepeat>
+        <gTBtwRepeats>1.0</gTBtwRepeats>
         <gTBtwGrInd>100</gTBtwGrInd>
-        <sendTimeoutMs>500</sendTimeoutMs>
-        <rRBdlit>4</rRBdlit>
+        <sendTimeoutMs>40</sendTimeoutMs>
+        <rRBdlit>3</rRBdlit>
         <rUseRBdlit>0</rUseRBdlit>
-        <rTimeSlot>10</rTimeSlot>
-        <rSlotAddDelay>100</rSlotAddDelay>
+        <rTimeSlot>9</rTimeSlot>
+        <rSlotAddDelay>40</rSlotAddDelay>
         <rT1>1</rT1>
         <rT2>0.5</rT2>
         <cStartIndicatorFading>1</cStartIndicatorFading>
