--- a/debug/settings.ini
+++ b/debug/settings.ini
@@ -10,6 +10,15 @@
             <P>0</P>
             <D></D>
         </PB>
+        <PB>
+            <ID>15</ID>
+            <T1>1</T1>
+            <T2>0.0</T2>
+            <U1>10.20</U1>
+            <U2>11.20</U2>
+            <P>0</P>
+            <D></D>
+        </PB>
     </Group3>
     <Group4>
         <PB>
@@ -30,28 +39,38 @@
             <P>0</P>
             <D></D>
         </PB>
+        <PB>
+            <ID>21</ID>
+            <T1>1</T1>
+            <T2>0.0</T2>
+            <U1>10.20</U1>
+            <U2>11.20</U2>
+            <P>0</P>
+            <D></D>
+        </PB>
     </Group4>
     <Settings>
         <A>1264882191</A>
         <AE>2506306137</AE>
         <COM>COM5</COM>
         <iTAnswerWait>500</iTAnswerWait>
-        <iNRepeat>1</iNRepeat>
-        <iTBtwRepeats>0.5</iTBtwRepeats>
-        <gNRepeat>2</gNRepeat>
-        <gTBtwRepeats>1.0</gTBtwRepeats>
-        <gTBtwGrInd>100</gTBtwGrInd>
-        <sendTimeoutMs>40</sendTimeoutMs>
-        <rRBdlit>3</rRBdlit>
-        <rUseRBdlit>0</rUseRBdlit>
+        <iNRepeat>2</iNRepeat>
+        <iTBtwRepeats>0.3</iTBtwRepeats>
+        <gNRepeat>1</gNRepeat>
+        <gTBtwRepeats>0.5</gTBtwRepeats>
+        <gTBtwGrInd>500</gTBtwGrInd>
+        <sendTimeoutMs>500</sendTimeoutMs>
+        <rRBdlit>5</rRBdlit>
+        <rUseRBdlit>1</rUseRBdlit>
         <rTimeSlot>9</rTimeSlot>
-        <rSlotAddDelay>40</rSlotAddDelay>
+        <rSlotAddDelay>700</rSlotAddDelay>
         <rT1>1</rT1>
         <rT2>0.5</rT2>
         <cStartIndicatorFading>1</cStartIndicatorFading>
         <About></About>
         <SaveLog>1</SaveLog>
-        <PBgroupnumber>3</PBgroupnumber>
+        <extraStatusAfterGroup>1</extraStatusAfterGroup>
+        <PBgroupnumber>4</PBgroupnumber>
         <status0>Реле1 выкл.</status0>
         <status1>Реле1 выключено</status1>
         <status2>Реле1 вкл.</status2>
