--- a/debug/settings.ini
+++ b/debug/settings.ini
@@ -1,8 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Panel>
-    <Group3>
+    <Group4>
+        <PB>
+            <ID>17</ID>
+            <T1>5</T1>
+            <T2>0.0</T2>
+            <U1>10.20</U1>
+            <U2>11.20</U2>
+            <P>0</P>
+            <D></D>
+        </PB>
+        <PB>
+            <ID>16</ID>
+            <T1>5</T1>
+            <T2>0.0</T2>
+            <U1>10.20</U1>
+            <U2>11.20</U2>
+            <P>0</P>
+            <D></D>
+        </PB>
+        <PB>
+            <ID>21</ID>
+            <T1>5</T1>
+            <T2>0.0</T2>
+            <U1>10.20</U1>
+            <U2>11.20</U2>
+            <P>0</P>
+            <D></D>
+        </PB>
         <PB>
             <ID>13</ID>
+            <T1>1</T1>
+            <T2>0.0</T2>
+            <U1>10.20</U1>
+            <U2>11.20</U2>
+            <P>0</P>
+            <D></D>
+        </PB>
+        <PB>
+            <ID>14</ID>
             <T1>1</T1>
             <T2>0.0</T2>
             <U1>10.20</U1>
@@ -19,49 +55,20 @@
             <P>0</P>
             <D></D>
         </PB>
-    </Group3>
-    <Group4>
-        <PB>
-            <ID>17</ID>
-            <T1>1</T1>
-            <T2>0.0</T2>
-            <U1>10.20</U1>
-            <U2>11.20</U2>
-            <P>0</P>
-            <D></D>
-        </PB>
-        <PB>
-            <ID>16</ID>
-            <T1>1</T1>
-            <T2>0.0</T2>
-            <U1>10.20</U1>
-            <U2>11.20</U2>
-            <P>0</P>
-            <D></D>
-        </PB>
-        <PB>
-            <ID>21</ID>
-            <T1>1</T1>
-            <T2>0.0</T2>
-            <U1>10.20</U1>
-            <U2>11.20</U2>
-            <P>0</P>
-            <D></D>
-        </PB>
     </Group4>
     <Settings>
         <A>1264882191</A>
         <AE>2506306137</AE>
-        <COM>COM5</COM>
-        <iTAnswerWait>500</iTAnswerWait>
+        <COM>COM2</COM>
+        <iTAnswerWait>700</iTAnswerWait>
         <iNRepeat>2</iNRepeat>
         <iTBtwRepeats>0.3</iTBtwRepeats>
-        <gNRepeat>1</gNRepeat>
-        <gTBtwRepeats>0.5</gTBtwRepeats>
-        <gTBtwGrInd>500</gTBtwGrInd>
+        <gNRepeat>2</gNRepeat>
+        <gTBtwRepeats>1.0</gTBtwRepeats>
+        <gTBtwGrInd>1000</gTBtwGrInd>
         <sendTimeoutMs>500</sendTimeoutMs>
         <rRBdlit>5</rRBdlit>
-        <rUseRBdlit>1</rUseRBdlit>
+        <rUseRBdlit>0</rUseRBdlit>
         <rTimeSlot>9</rTimeSlot>
         <rSlotAddDelay>700</rSlotAddDelay>
         <rT1>1</rT1>
@@ -70,6 +77,7 @@
         <About></About>
         <SaveLog>1</SaveLog>
         <extraStatusAfterGroup>1</extraStatusAfterGroup>
+        <legacyGroupCommands>0</legacyGroupCommands>
         <PBgroupnumber>4</PBgroupnumber>
         <status0>Реле1 выкл.</status0>
         <status1>Реле1 выключено</status1>
