--- a/Makefile.Release
+++ b/Makefile.Release
@@ -2248,6 +2248,23 @@ release/window.o: window.cpp C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/QFile
 		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtGui/QDesktopServices \
 		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtGui/qdesktopservices.h \
 		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/qstandardpaths.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtGui/QScreen \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtGui/qscreen.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/QList \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/QObject \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/QRect \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/QSize \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/QSizeF \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtGui/QTransform \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtGui/QGuiApplication \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtGui/QWindow \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtGui/qwindow.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/QEvent \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/QMargins \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtGui/qsurface.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtGui/qsurfaceformat.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtGui/qicon.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/QDesktopWidget \
 		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/QDir \
 		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/qdir.h \
 		window.h \
@@ -2310,7 +2327,6 @@ release/window.o: window.cpp C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/QFile
 		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/qabstractspinbox.h \
 		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtGui/qvalidator.h \
 		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/qregularexpression.h \
-		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtGui/qicon.h \
 		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/qslider.h \
 		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/qabstractslider.h \
 		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/qstyle.h \
@@ -2639,7 +2655,16 @@ release/pbsetup.o: pbsetup.cpp pbsetup.h \
 		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/QMessageBox \
 		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/qmessagebox.h \
 		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/QFile \
-		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/QTextStream
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/QTextStream \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/QRegularExpression \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/QSet \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/QLayout \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/qlayout.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/qlayoutitem.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/qboxlayout.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/qgridlayout.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/QThread \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtCore/qthread.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\pbsetup.o pbsetup.cpp
 
 release/appset.o: appset.cpp appset.h \
@@ -3472,7 +3497,23 @@ release/wappsett.o: wappsett.cpp wappsett.h \
 		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtGui/qtextdocument.h \
 		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/QVBoxLayout \
 		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtSerialPort/QSerialPortInfo \
-		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtSerialPort/qserialportinfo.h
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtSerialPort/qserialportinfo.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/QScrollArea \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/qscrollarea.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/QTabBar \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/QLayout \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtGui/QFontDatabase \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtGui/qfontdatabase.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/QGraphicsView \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/qgraphicsview.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/qgraphicsscene.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/QGraphicsScene \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/QGraphicsProxyWidget \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/qgraphicsproxywidget.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/qgraphicswidget.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/qgraphicslayoutitem.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/qgraphicsitem.h \
+		C:/Qt/Qt5.9.1/5.9.1/mingw53_32/include/QtWidgets/QDesktopWidget
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\wappsett.o wappsett.cpp
 
 release/wabout.o: wabout.cpp wabout.h \
