--- a/release/settings.ini
+++ b/release/settings.ini
@@ -1,8 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Panel>
-    <Group0>
+    <Group4>
         <PB>
-            <ID></ID>
+            <ID>17</ID>
+            <T1>10</T1>
+            <T2>0.0</T2>
+            <U1>10.20</U1>
+            <U2>11.20</U2>
+            <P>0</P>
+            <D></D>
+        </PB>
+        <PB>
+            <ID>16</ID>
+            <T1>5</T1>
+            <T2>0.0</T2>
+            <U1>10.20</U1>
+            <U2>11.20</U2>
+            <P>0</P>
+            <D></D>
+        </PB>
+        <PB>
+            <ID>21</ID>
+            <T1>5</T1>
+            <T2>0.0</T2>
+            <U1>10.20</U1>
+            <U2>11.20</U2>
+            <P>0</P>
+            <D></D>
+        </PB>
+        <PB>
+            <ID>13</ID>
             <T1>1</T1>
             <T2>0.0</T2>
             <U1>10.20</U1>
@@ -10,27 +37,48 @@
             <P>0</P>
             <D></D>
         </PB>
-    </Group0>
+        <PB>
+            <ID>14</ID>
+            <T1>1</T1>
+            <T2>0.0</T2>
+            <U1>10.20</U1>
+            <U2>11.20</U2>
+            <P>0</P>
+            <D></D>
+        </PB>
+        <PB>
+            <ID>15</ID>
+            <T1>1</T1>
+            <T2>0.0</T2>
+            <U1>10.20</U1>
+            <U2>11.20</U2>
+            <P>0</P>
+            <D></D>
+        </PB>
+    </Group4>
     <Settings>
         <A>1264882191</A>
         <AE>2506306137</AE>
-        <COM></COM>
+        <COM>COM2</COM>
         <iTAnswerWait>500</iTAnswerWait>
         <iNRepeat>2</iNRepeat>
-        <iTBtwRepeats>0.5</iTBtwRepeats>
-        <gNRepeat>2</gNRepeat>
-        <gTBtwRepeats>0.5</gTBtwRepeats>
-        <gTBtwGrInd>100</gTBtwGrInd>
-        <rRBdlit>60</rRBdlit>
+        <iTBtwRepeats>0.3</iTBtwRepeats>
+        <gNRepeat>1</gNRepeat>
+        <gTBtwRepeats>1.0</gTBtwRepeats>
+        <gTBtwGrInd>1000</gTBtwGrInd>
+        <sendTimeoutMs>500</sendTimeoutMs>
+        <rRBdlit>5</rRBdlit>
         <rUseRBdlit>1</rUseRBdlit>
-        <rTimeSlot>0</rTimeSlot>
-        <rSlotAddDelay>50</rSlotAddDelay>
+        <rTimeSlot>9</rTimeSlot>
+        <rSlotAddDelay>700</rSlotAddDelay>
         <rT1>1</rT1>
-        <rT2>0</rT2>
+        <rT2>0.5</rT2>
         <cStartIndicatorFading>1</cStartIndicatorFading>
         <About></About>
-        <SaveLog>0</SaveLog>
-        <PBgroupnumber>0</PBgroupnumber>
+        <SaveLog>1</SaveLog>
+        <extraStatusAfterGroup>1</extraStatusAfterGroup>
+        <legacyGroupCommands>0</legacyGroupCommands>
+        <PBgroupnumber>4</PBgroupnumber>
         <status0>Реле1 выкл.</status0>
         <status1>Реле1 выключено</status1>
         <status2>Реле1 вкл.</status2>
